--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -1,8 +1,10 @@
 //main
 @import "blocks/animations";
+@import "blocks/buttons";
+@import "blocks/callback";
 
 // cards
 // @import "blocks/post-card";
 
 // blocks
-// @import "blocks/about";
+@import "blocks/header";
