add and done modal

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -2,6 +2,7 @@
 @import "blocks/animations";
 @import "blocks/buttons";
 @import "blocks/callback";
+@import "blocks/form-elements";
 
 // cards
 // @import "blocks/post-card";
@@ -9,3 +10,4 @@
 // blocks
 @import "blocks/footer";
 @import "blocks/header";
+@import "blocks/modal";
