--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,8 +1,7 @@
 :root {
 	// FONTS
-	--font-primary: "Manrope", "Arial", sans-serif;
+	--font-primary: "Poppins", "Arial", sans-serif;
 	--font-secondary: "RobotoSerif", "Times New Roman", serif;
-	--font-tertiary: "Roboto", "Arial", sans-serif;
 	--font-decorative: "TrainOne", "Arial", sans-serif;
 
 	//COLORS
