--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,10 +1,20 @@
 @font-face {
 	font-weight: 400;
-	font-family: TenorSans;
+	font-family: Poppins;
 	font-style: normal;
 	src:
-		url(assets/fonts/TenorSans.woff2) format("woff2"),
-		url(assets/fonts/TenorSans.woff) format("woff");
+		url(assets/fonts/Poppins-Regular.woff2) format("woff2"),
+		url(assets/fonts/Poppins-Regular.woff) format("woff");
+	font-display: swap;
+}
+
+@font-face {
+	font-weight: 700;
+	font-family: Poppins;
+	font-style: normal;
+	src:
+		url(assets/fonts/Poppins-Bold.woff2) format("woff2"),
+		url(assets/fonts/Poppins-Bold.woff) format("woff");
 	font-display: swap;
 }
 
@@ -15,36 +25,6 @@
 	src:
 		url(assets/fonts/RobotoSerif-Regular.woff2) format("woff2"),
 		url(assets/fonts/RobotoSerif-Regular.woff) format("woff");
-	font-display: swap;
-}
-
-@font-face {
-	font-weight: 300;
-	font-family: Roboto;
-	font-style: normal;
-	src:
-		url(assets/fonts/Roboto-Light.woff2) format("woff2"),
-		url(assets/fonts/Roboto-Light.woff) format("woff");
-	font-display: swap;
-}
-
-@font-face {
-	font-weight: 400;
-	font-family: Roboto;
-	font-style: normal;
-	src:
-		url(assets/fonts/Roboto-Regular.woff2) format("woff2"),
-		url(assets/fonts/Roboto-Regular.woff) format("woff");
-	font-display: swap;
-}
-
-@font-face {
-	font-weight: 700;
-	font-family: Roboto;
-	font-style: normal;
-	src:
-		url(assets/fonts/Roboto-Bold.woff2) format("woff2"),
-		url(assets/fonts/Roboto-Bold.woff) format("woff");
 	font-display: swap;
 }
 
