add and done .partner-requirements

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -13,5 +13,6 @@
 @import "blocks/footer";
 @import "blocks/header";
 @import "blocks/modal";
+@import "blocks/partner-requirements";
 @import "blocks/welcome";
 @import "blocks/why-us";
