add and done .premises-requirements

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -14,5 +14,6 @@
 @import "blocks/header";
 @import "blocks/modal";
 @import "blocks/partner-requirements";
+@import "blocks/premises-requirements";
 @import "blocks/welcome";
 @import "blocks/why-us";
