add and done .gallery

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -11,6 +11,7 @@
 // blocks
 @import "blocks/achievements";
 @import "blocks/footer";
+@import "blocks/gallery";
 @import "blocks/header";
 @import "blocks/modal";
 @import "blocks/partner-requirements";
