add and done .advantages

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -10,6 +10,7 @@
 
 // blocks
 @import "blocks/achievements";
+@import "blocks/advantages";
 @import "blocks/footer";
 @import "blocks/gallery";
 @import "blocks/header";
