add and done .partnership-options

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -16,6 +16,7 @@
 @import "blocks/header";
 @import "blocks/modal";
 @import "blocks/partner-requirements";
+@import "blocks/partnership-options";
 @import "blocks/premises-requirements";
 @import "blocks/welcome";
 @import "blocks/why-us";
