add and done .form-contacts

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -3,6 +3,7 @@
 @import "blocks/buttons";
 @import "blocks/callback";
 @import "blocks/form-elements";
+@import "blocks/main-form";
 @import "blocks/title";
 
 // cards
@@ -12,6 +13,7 @@
 @import "blocks/achievements";
 @import "blocks/advantages";
 @import "blocks/footer";
+@import "blocks/form-contacts";
 @import "blocks/gallery";
 @import "blocks/header";
 @import "blocks/modal";
