--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -13,6 +13,7 @@
 @import "blocks/achievements";
 @import "blocks/advantages";
 @import "blocks/footer";
+@import "blocks/form-atlas";
 @import "blocks/form-contacts";
 @import "blocks/gallery";
 @import "blocks/header";
