--- a/assets/scss/blocks/_buttons.scss
+++ b/assets/scss/blocks/_buttons.scss
@@ -13,6 +13,8 @@
 	border: 2px solid transparent;
 	border-radius: 20px;
 	transition: var(--transition);
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	-webkit-tap-highlight-color: transparent;
 
 	@include hg {
 		padding: 15px 20px;
