--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -4,6 +4,7 @@
 @import "blocks/callback";
 @import "blocks/form-elements";
 @import "blocks/main-form";
+@import "blocks/text-styles";
 @import "blocks/title";
 
 // cards
@@ -17,6 +18,7 @@
 @import "blocks/form-contacts";
 @import "blocks/gallery";
 @import "blocks/header";
+@import "blocks/main-list";
 @import "blocks/modal";
 @import "blocks/partner-requirements";
 @import "blocks/partnership-options";
