--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -4,6 +4,7 @@
 @import "blocks/callback";
 @import "blocks/form-elements";
 @import "blocks/main-form";
+@import "blocks/slider-controls";
 @import "blocks/text-styles";
 @import "blocks/title";
 
@@ -16,6 +17,7 @@
 @import "blocks/footer";
 @import "blocks/form-atlas";
 @import "blocks/form-contacts";
+@import "blocks/functionality-slider";
 @import "blocks/gallery";
 @import "blocks/header";
 @import "blocks/main-list";
