add and done .pills-text

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -24,6 +24,7 @@
 @import "blocks/modal";
 @import "blocks/partner-requirements";
 @import "blocks/partnership-options";
+@import "blocks/pills-text";
 @import "blocks/premises-requirements";
 @import "blocks/welcome";
 @import "blocks/why-us";
