--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -23,6 +23,7 @@
 @import "blocks/main-list";
 @import "blocks/modal";
 @import "blocks/partner-requirements";
+@import "blocks/partner-stories";
 @import "blocks/partnership-options";
 @import "blocks/pills-text";
 @import "blocks/premises-requirements";
