add and done .faq

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -14,6 +14,7 @@
 // blocks
 @import "blocks/achievements";
 @import "blocks/advantages";
+@import "blocks/faq";
 @import "blocks/footer";
 @import "blocks/form-atlas";
 @import "blocks/form-contacts";
