add and done .interaction

--- a/assets/scss/_blocks.scss
+++ b/assets/scss/_blocks.scss
@@ -21,6 +21,7 @@
 @import "blocks/functionality-slider";
 @import "blocks/gallery";
 @import "blocks/header";
+@import "blocks/interaction";
 @import "blocks/main-list";
 @import "blocks/modal";
 @import "blocks/partner-requirements";
